k3s_cluster/base/private/home/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: private
  labels:
    app: private-homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-homeassistant
  template:
    metadata:
      labels:
        app: private-homeassistant
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      serviceAccountName: serviceaccount
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:latest
          imagePullPolicy: IfNotPresent
          # restartPolicy: Always
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: data
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
