k3s_cluster/base/private/home/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-home-homeassistant
spec:
  type: ClusterIP
  selector:
    app: private-home-homeassistant
  ports:
    - name: web
      protocol: TCP
      port: 4404
      targetPort: 8123
