k3s_cluster/base/private/home/home-assistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-home-homeassistant
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`homeassistant.home.private.home`)
      # middlewares:
      #   - name: private-middleware-auth-authentik
      services:
        - name: private-home-homeassistant-service
          port: 4404
          # tls: {}
